@@ -16,6 +16,8 @@ Yosys 0.11 .. Yosys 0.12
     - Support parameters using struct as a wiretype
     - Fixed regression preventing the use array querying functions in case
       expressions and case item expressions
+    - Fixed static size casts inadvertently limiting the result width of binary
+      operations
 
  * New commands and options
     - Added "-genlib" option to "abc" pass
